# ultimate-pentagon

./: .gitignore  README.md  pyproject.toml
src/pentagon/: __init__.py  __main__.py
