
[tool.poetry]
name = "ultimate-pentagon"
version = "0.0.1"
description = "Fun little space themed dodge the circle segments game."
authors = ["Zageron <hello@adambryant.ca>", "Rapta <raptorindian@gmail.com>"]
repository = "https://github.com/Zageron/ultimate-pentagon"

packages = [{ include = "pentagon", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.2"
pygame-gui = "^0.5.7"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.5.2"
black = "^21.9b0"
pytest = "^6.2.5"
Nuitka = "^0.6.17"

[tool.poetry.scripts]
my-project = "ultimate-pentagon.pentagon:run"

[tool.pyright]
include = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
